--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,5 @@ jobs:
       - run: yarn
       - run: yarn build
       - run: yarn test
-      - run: pm2 stop react-cicd-test
+      - run: pm2 delete react-cicd-test
       - run: pm2 start "serve -s build" --name react-cicd-test
