--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,4 @@ jobs:
       - run: yarn test
       - run: pm2 delete react-cicd-test
       - run: pm2 start "serve -s build" --name react-cicd-test
+      - run: pm2 save
